website-iac/k8s/apps/website-portal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-portal
  namespace: default
  labels:
    app: website-portal
spec:
  replicas: 2
  selector:
    matchLabels:
      app: website-portal
  template:
    metadata:
      labels:
        app: website-portal
    spec:
      containers:
      - name: web-app
        image: ghcr.io/muku3011/website/portal:17dc8aecc36129325ff57ba945e7d3cd49fc2c70
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "250m"
        securityContext:
          runAsNonRoot: true
          runAsUser: 10001
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
---
apiVersion: v1
kind: Service
metadata:
  name: website-portal-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: website-portal
  ports:
  - port: 80
    targetPort: 80
